--- a/style.css
+++ b/style.css
@@ -33,8 +33,9 @@ body {
     height: 100vh;
     width: 100%;
     color: white;
-    transition: 1s ease;
+    transition: 0.2s ease-in-out;
     z-index: 1;
+    top: 0;
 }
 
 #header-text {
@@ -50,7 +51,7 @@ body {
     /* Estilo */
     font-size: 14rem;
     text-align: center;
-    transition: 1s ease;
+    transition: 1s ease-in-out;
 }
 
 #scroll-text {
@@ -61,7 +62,7 @@ body {
     position: absolute;
     bottom: 30px;
     animation: fade-in-out 5s infinite;
-    font-size: 1.2rem;
+    font-size: 3rem;
     color: white;
 }
 
@@ -87,7 +88,6 @@ main {
 #text-information {
     width: 360px;
     color: white;
-    padding-top: 300px;
 }
 
 p {
@@ -99,7 +99,6 @@ p {
     flex-direction: column;
     gap: 30px;
     width: 800px;
-    padding-top: 300px;
 }
 
 .entry-box {
