--- a/entry-4/style.css
+++ b/entry-4/style.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "old-claude-lp-regular", sans-serif;
-    background-color: darkblue;
+    background-color: green;
 }
 
 #container {
@@ -16,7 +16,7 @@ body {
 }
 
 header {
-    background-color: darkblue;
+    background-color: green;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -77,7 +77,7 @@ h1 {
 footer {
     height: 50px;
     width: 100vw;
-    background-color: darkblue;
+    background-color: green;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -118,6 +118,6 @@ h3{
 
 #text{
     text-align: center;
-    color: lightskyblue;
+    color: lightgreen;
     transition: 0.4s ease;
 }
