--- a/entry-8/style.css
+++ b/entry-8/style.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: "old-claude-lp-regular", sans-serif;
-    background-color: darkred;
+    background-color: purple;
 }
 
 #container {
@@ -16,7 +16,7 @@ body {
 }
 
 header {
-    background-color: darkred;
+    background-color: purple;
     color: white;
     display: flex;
     justify-content: space-between;
@@ -77,7 +77,7 @@ h1 {
 footer {
     height: 50px;
     width: 100vw;
-    background-color: darkred;
+    background-color: purple;
     display: flex;
     align-items: center;
     justify-content: space-between;
